# Hospital-ACPxMCP

./: main.py  pyproject.toml  requirements.txt
ACPxMCP/: README.md  acpxmcp.py  mcpserver.py  testacpxmcp.py
acp_server/: README.md  rag_system.py  seqchain.py  smolagent.py
vectorstore/: index.faiss  index.pkl
